# ivado_labs_takehome

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: bronze.md  gold.csv  gold.md  silver.csv  silver.md
notebooks/: notebook.py
src/: ingest.py  predict.py  train.py
