[tool.poetry]
name = "ivado_labs_takehome"
version = "0.1.0"
description = ""
authors = ["martin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
psycopg2-binary = "^2.9.6"
numpy = "^1.24.3"
pandas = "^2.0.1"
lxml = "^4.9.2"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.13"
geopy = "^2.3.0"
geonamescache = "^1.6.0"
pycountry = "^22.3.5"
geotext = "^0.4.0"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
